--- a/shortcuts.yml
+++ b/shortcuts.yml
@@ -3,11 +3,15 @@
 
 sx 1:
   url: https://searx.tiekoetter.com/search?q=<query>
-  title: Searx
+  title: Searx from Tiekoetter
 
 gx 1:
   url: https://gruble.de/search?q=<query>
   title: Searx on Gruble
+
+sxs 1:
+  url: https://search.sapti.me/search?q=<query>
+  title: Searx from Sapti
 
 examplekeyword 0: http://www.example.com/
 examplekeyword 1: http://www.example.com/?q=<query>
